<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:rowCount="3"
        tools:ignore="MissingConstraints">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:background="@color/blue"
            android:paddingEnd="15sp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_gravity="start"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/white"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/regresar"
                android:backgroundTint="@color/red"
                android:drawableLeft="@drawable/baseline_arrow_back_24"
                android:text="@string/regresar"
                android:textColor="@color/white"
                android:layout_gravity="end"
                />
        </androidx.appcompat.widget.Toolbar>
        <TextView
            android:layout_marginTop="8sp"
            android:layout_marginStart="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quienes"
            android:textStyle="bold"
            android:textSize="20sp"
            />

        <RadioGroup
            android:layout_marginStart="10sp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="start"
            android:id="@+id/opcRol"
            >
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/opcEstudiante"
                android:text="@string/opcEstudiante"
                android:textColor="@color/black"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/opcObrero"
                android:text="@string/opcObrero"
                android:textColor="@color/black"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/opcFuncionario"
                android:text="@string/opcFuncionario"
                android:textColor="@color/black"
                />
        </RadioGroup>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>